Adding fixes for additional task lab 2

--- a/2/additional.html
+++ b/2/additional.html
@@ -1,6 +1,5 @@
 <style>
-  #photos {
-   /* Prevent vertical gaps */
+#photos {
    line-height: 0;
    
    -webkit-column-count: 5;
@@ -12,7 +11,6 @@
 }
 
 #photos img {
-  /* Just in case there are inline attributes */
   width: 100% !important;
   height: auto !important;
 }
@@ -52,8 +50,19 @@ body {
 }
 </style>
 <section id="photos">
+  <img src="https://placekitten.com/500/300" alt="pretty kitty">
+  <img src="https://placekitten.com/500/300" alt="pretty kitty">
+  <img src="https://placekitten.com/500/300" alt="pretty kitty">
+  <img src="https://placekitten.com/300/300" alt="pretty kitty">
   <img src="https://placekitten.com/300/400" alt="pretty kitty">
   <img src="https://placekitten.com/300/400" alt="pretty kitty">
   <img src="https://placekitten.com/300/400" alt="pretty kitty">
+  <img src="https://placekitten.com/300/400" alt="pretty kitty">
+  <img src="https://placekitten.com/300/400" alt="pretty kitty">
+  <img src="https://placekitten.com/200/400" alt="pretty kitty">
+  <img src="https://placekitten.com/500/300" alt="pretty kitty">
+  <img src="https://placekitten.com/300/400" alt="pretty kitty">
+  <img src="https://placekitten.com/200/400" alt="pretty kitty">
+  <img src="https://placekitten.com/500/300" alt="pretty kitty">
   <img src="https://placekitten.com/300/400" alt="pretty kitty">
 </section>
