--- a/2/additional.html
+++ b/2/additional.html
@@ -53,7 +53,7 @@ body {
   <img src="https://placekitten.com/500/300" alt="pretty kitty">
   <img src="https://placekitten.com/500/300" alt="pretty kitty">
   <img src="https://placekitten.com/500/300" alt="pretty kitty">
-  <img src="https://placekitten.com/300/300" alt="pretty kitty">
+  <!-- <img src="https://placekitten.com/300/300" alt="pretty kitty">
   <img src="https://placekitten.com/300/400" alt="pretty kitty">
   <img src="https://placekitten.com/300/400" alt="pretty kitty">
   <img src="https://placekitten.com/300/400" alt="pretty kitty">
@@ -64,5 +64,5 @@ body {
   <img src="https://placekitten.com/300/400" alt="pretty kitty">
   <img src="https://placekitten.com/200/400" alt="pretty kitty">
   <img src="https://placekitten.com/500/300" alt="pretty kitty">
-  <img src="https://placekitten.com/300/400" alt="pretty kitty">
+  <img src="https://placekitten.com/300/400" alt="pretty kitty"> -->
 </section>
